feat: Init WebView

--- a/Browser/app/src/main/res/layout/activity_main.xml
+++ b/Browser/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/addressBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
             android:importantForAutofill="no"
             android:inputType="textUri"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -59,11 +60,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <WebView
+        android:id="@+id/webView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
